--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "tokyo",
+  "name": "minimalist",
+  "homepage": "http://rkirk.tech",
   "version": "2.0.1",
   "private": true,
   "dependencies": {
